add highchart to currency page

--- a/src/pages/currency/currency.html
+++ b/src/pages/currency/currency.html
@@ -40,7 +40,7 @@
     </ion-row>
 
     <ion-row align-items-center>
-      <pre>{{item | json}}</pre>
+      <div style="height: 360px" class="max-width" [chart]="chart"></div>
     </ion-row>
 
   </ion-grid>
