try to use highchart area

--- a/src/pages/currency/currency.html
+++ b/src/pages/currency/currency.html
@@ -40,7 +40,7 @@
     </ion-row>
 
     <ion-row align-items-center>
-      <div style="height: 360px" class="max-width" [chart]="chart"></div>
+      <div style="height: 360px" class="max-width" type="StockChart" [chart]="chart"></div>
     </ion-row>
 
   </ion-grid>
