--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -18,7 +18,7 @@
 
 </ion-header>
 
-<ion-content padding *ngIf="marketCap">
+<ion-content padding>
   <div class="market-cap">
     <p>
       Total Market Cap (USD):
